--- a/style.css
+++ b/style.css
@@ -115,11 +115,11 @@ nav{
   width: 350px;
   border-radius: 50%;
   display: inline-block;
-  margin: 50px;
+  margin: 3%;
 }
 
 .loe {
-  padding-left: 80px;
+  padding-left: 6%;
   padding-top: 60px;
   padding-bottom: 200px;
 }
